--- a/academy.yaml
+++ b/academy.yaml
@@ -2,20 +2,21 @@ AWSTemplateFormatVersion: "2010-09-09"
 
 Description: Lambda functions for scanning iOLAP Academy services
 
-# Lambdas for scanning - Done
-# Lambda role - Done
-# Lambda Invoke config
-# S3 bucket for Lambda zip file - Done
-# SNS topic + sub - Done
-# EventBridge cron job rule - Done
-
 Resources:
-  # S3Bucket:
-  #   Type: AWS::S3::Bucket
-  #   DeletionPolicy: Retain
-  #   UpdateReplacePolicy: Retain
-  #   Properties:
-  #     BucketName: academy-lambda-bucket
+  EC2Policy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      ManagedPolicyName: AcademyEC2RestrictionPolicy
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Deny"
+            Action: "ec2:RunInstances"
+            Resource: "arn:aws:ec2:*:*:instance/*"
+            Condition:
+                StringNotLike:
+                  "ec2:InstanceType": "*.micro"
+      Description: iOLAP Academy EC2 restriction policy
 
   EventBridgeCron:
     Type: AWS::Events::Rule
